--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,14 @@ services:
     devlikeapro/waha:latest
   container_name: 
     waha-container
-  restart: 
-    always
   ports:
     - '3000:3000'
  db:
   image: 
     postgres
-  restart: always
   volumes:
       - ./data/db:/var/lib/postgres
+      - ./data/db/init.sql:/docker-entrypoint-initdb.d/init.sql
   environment:
       - POSTGRES_HOST=${POSTGRES_HOST}
       - POSTGRES_DB=${POSTGRES_DATABASE}
@@ -29,8 +27,6 @@ services:
   volumes:
       - ./code:/app
   container_name: api-container
-  restart: 
-    always
   environment:
       - POSTGRES_HOST=db
       - POSTGRES_DB=${POSTGRES_DATABASE}
